# podomarket

./: README.md  pyproject.toml
config/: settings.py  urls.py
podomarket/: admin.py  forms.py  middleware.py  models.py  urls.py  validators.py  views.py
podomarket/migrations/: 0001_initial.py  0002_user_address_user_kakao_id_user_nickname.py  0003_alter_user_address_alter_user_kakao_id_and_more.py  0004_alter_post_item_condition_alter_post_item_price.py  0005_post_is_sold.py  0006_user_profile_pic.py
podomarket/templates/account/: login.html  signup.html
podomarket/templates/account/email/: email_confirmation_signup_message.txt  password_reset_key_message.txt
podomarket/templates/podomarket/: email_confirmation_done.html  index.html  post_detail.html  post_form.html  profile.html  user_post_list.html
podomarket/templates/podomarket_base/: base_with_navbar.html
